--- a/reports/LitReview.Rmd
+++ b/reports/LitReview.Rmd
@@ -9,4 +9,13 @@ This is literature review for the MPM errors project. It will include a descript
 
 # Guidance on matrix construction
 ## Census model and survival in the reproduction transition
-Caswell (2001) introduces this early on (section 2.4, pp. 22-28), in the context of purely age-structured models. He starts with birth-flow models, with deriviations that are conceptually complex; he does not make a big deal out of the survival terms and it's probably easy to miss the conceptual issue. The description of birth-pulse reproduction is cast in terms of arbitrary census timing, with prebreeding and postbreeding derived as special cases. In addition, the prebreeding survival component is given as $l(1)$ rather than $P_0$ (Caswell never calculates $P_0$, although its potential existence is implicit in the survival equation earlier in the section). Thus, it takes some careful reading to realize that it involves newborn survival (although, of course, it is the postbreeding models that are generally problematic).
+Caswell (2001) introduces this early on (section 2.4, pp. 22-28), in the context of purely age-structured models. He starts with birth-flow models, with deriviations that are conceptually complex; he does not make a big deal out of the survival terms and it's probably easy to miss the conceptual issue. The description of birth-pulse reproduction is cast in terms of arbitrary census timing, with prebreeding and postbreeding derived as special cases. In addition, the prebreeding survival component is given as $l(1)$ rather than $P_0$ (Caswell never calculates $P_0$, although its potential existence is implicit in the survival equation earlier in the section). Thus, it takes some careful reading to realize that it involves newborn survival (although, of course, it is the postbreeding models that are generally problematic). The chapter on stage-structured models does not revisit these issues, except for the correction of the teasel model (see below).
+
+
+# Highlighting errors
+## Treatment of seeds
+In example 4.1, Caswell (2001) corrects his earlier model of teasel (Werner and Caswell 1977). This is actually a prebreeding model, and the original failed to include a year of seed survival and development. But he doesn't say this in so many words. Instead, he says
+
+> The description of reproduction in $\mathbf{A}_1$ [the original model] is fundamentally flawed. According to Figure 4.3 flowering plants in year $t$ produce seeds in year $t+1$, some of which germinate to produce vegetative rosettes in year $t+2$. In reality, flowering plants in year $t$ produce seeds that may germinate and produce rosettes in year $t+1$. Thus $\mathbf{A}_1$ has introduced an unrealistic delay of 1 year in the process of reproduction.
+
+To my view, the "in reality" suggests to the reader that he just forgot that seeds can germinate right away, and takes the focus away from the fact that the first class in a prebreeding model must be a year old. He also doesn't explain how he calculates the reproductive transition, which would have been another place to highlight this issue.
