--- a/reports/LitReview.Rmd
+++ b/reports/LitReview.Rmd
@@ -11,6 +11,8 @@ This is literature review for the MPM errors project. It will include a descript
 ## Census model and survival in the reproduction transition
 Caswell (2001) introduces this early on (section 2.4, pp. 22-28), in the context of purely age-structured models. He starts with birth-flow models, with deriviations that are conceptually complex; he does not make a big deal out of the survival terms and it's probably easy to miss the conceptual issue. The description of birth-pulse reproduction is cast in terms of arbitrary census timing, with prebreeding and postbreeding derived as special cases. In addition, the prebreeding survival component is given as $l(1)$ rather than $P_0$ (Caswell never calculates $P_0$, although its potential existence is implicit in the survival equation earlier in the section). Thus, it takes some careful reading to realize that it involves newborn survival (although, of course, it is the postbreeding models that are generally problematic). The chapter on stage-structured models does not revisit these issues, except for the correction of the teasel model (see below).
 
+In Caswell's notation for birth-pulse models, an individual in age class $i$ will be $i$ years old at its *next* birthday. Thus for the postbreeding census he writes $F_i = P_i m_i$, where $P_i$ is survival from age $i-1$ to age $i$ (which is in fact specified in eq. 2.40) and $m_i$ is maternity at age $i$. This is sensible if you always want class indicies to start from 1; but lack of careful attention to eq. (2.40) may lead to mistakes here.
+
 
 # Highlighting errors
 ## Treatment of seeds
