--- a/reports/LitReview.Rmd
+++ b/reports/LitReview.Rmd
@@ -14,6 +14,8 @@ Caswell (2001) introduces this early on (section 2.4, pp. 22-28), in the context
 In Caswell's notation for birth-pulse models, an individual in age class $i$ will be $i$ years old at its *next* birthday. Thus for the postbreeding census he writes $F_i = P_i m_i$, where $P_i$ is survival from age $i-1$ to age $i$ (which is in fact specified in eq. 2.40) and $m_i$ is maternity at age $i$. This is sensible if you always want class indicies to start from 1; but lack of careful attention to eq. (2.40) may lead to mistakes here. Gotelli (2008) also follows this convention, and in fact only talks about postbreeding census models.
 
 ## Maturation and reproduction
+Caswell treats fertilities in stage-structured models in section 6.7. For prebreeding census, he gives $F_i = l(1) m_i$ (eq. 6.146), and for a postbreeding census of his standard model, he gives $F_i = P_i m_i + G_i m_{i+1}$ (eq. 6.150). Note that this implicitly assumes that the stage name describes the state at the beginning of the time interval, a change from his treatment of age-structured models.
+
 When Gotelli (2008) moves to stage structured models, his first class is zero years old (in the first example, it is labled "egg," and he is only considering postbreeding census models). Thus he has (unknowingly, perhaps) switched from labeling stages by its state at the end of the transition to its state at the beginning of the transition. Nevertheless, individuals that mature from "larva" to "adult" do not reproduce; and in all three examples, all individuals, whether staying in the same class or moving to a different one, have the fertilities of the initial class; he does not describe how to construct those fertilities.
 
 
