--- a/reports/LitReview.Rmd
+++ b/reports/LitReview.Rmd
@@ -11,16 +11,19 @@ This is literature review for the MPM errors project. It will include a descript
 ## Census model and survival in the reproduction transition
 Caswell (2001) introduces this early on (section 2.4, pp. 22-28), in the context of purely age-structured models. He starts with birth-flow models, with deriviations that are conceptually complex; he does not make a big deal out of the survival terms and it's probably easy to miss the conceptual issue. The description of birth-pulse reproduction is cast in terms of arbitrary census timing, with prebreeding and postbreeding derived as special cases. In addition, the prebreeding survival component is given as $l(1)$ rather than $P_0$ (Caswell never calculates $P_0$, although its potential existence is implicit in the survival equation earlier in the section). Thus, it takes some careful reading to realize that it involves newborn survival (although, of course, it is the postbreeding models that are generally problematic). The chapter on stage-structured models does not revisit these issues, except for the correction of the teasel model (see below).
 
-In Caswell's notation for birth-pulse models, an individual in age class $i$ will be $i$ years old at its *next* birthday. Thus for the postbreeding census he writes $F_i = P_i m_i$, where $P_i$ is survival from age $i-1$ to age $i$ (which is in fact specified in eq. 2.40) and $m_i$ is maternity at age $i$. This is sensible if you always want class indicies to start from 1; but lack of careful attention to eq. (2.40) may lead to mistakes here. Gotelli (2008) also follows this convention, and in fact only talks about postbreeding census models.
-
-Morris and Doak's (2002, pp. 207-210) is consistent with Caswell for prebreeding and birth-flow models. For postbreeding models, they say $F_j = s_j f_j$. It is clear from their treatment of survival and growth that $j$ references the state at the start of the interval.
-
 ## Maturation and reproduction
 Caswell treats fertilities in stage-structured models in section 6.7. For prebreeding census, he gives $F_i = l(1) m_i$ (eq. 6.146), and for a postbreeding census of his standard model, he gives $F_i = P_i m_i + G_i m_{i+1}$ (eq. 6.150). Note that this implicitly assumes that the stage name describes the state at the beginning of the time interval, a change from his treatment of age-structured models.
 
 When Gotelli (2008) moves to stage structured models, his first class is zero years old (in the first example, it is labled "egg," and he is only considering postbreeding census models). Thus he has (unknowingly, perhaps) switched from labeling stages by its state at the end of the transition to its state at the beginning of the transition. Nevertheless, individuals that mature from "larva" to "adult" do not reproduce; and in all three examples, all individuals, whether staying in the same class or moving to a different one, have the fertilities of the initial class; he does not describe how to construct those fertilities.
 
 Morris and Doak (2002) do not discuss this. Their one worked example is for a prebreeding census, so does not provide insight on how they would have handled maturation in a postbreeding census.
+
+## Class names
+At the very introduction of the Leslie matrix model, Caswell (2001) has a figure (2.1, on p. 8) that shows "Age-class (i)" *spanning* the entire period from age $i-1$ to age $i$. On the next page, he explicitely invokes a hypthetical population in which "individuals are classified into three age classes (0--1, 1--2, and 2--3 years)." Gotelli (2008) copies this figure; it is his only graphical representation of the relationship between age and class. This definition makes sense for a birth-flow population, but not for a birth-pulse population with a well-defined census age. It is not until p. 26 that Caswell introduces the notion that age class $i$ represents individuals of age $i-1+p$. This is perhaps why so many models use interval class names for birth-pulse models.
+
+In Caswell's notation for birth-pulse models, an individual in age class $i$ will be $i$ years old at its *next* birthday. Thus for the postbreeding census he writes $F_i = P_i m_i$, where $P_i$ is survival from age $i-1$ to age $i$ (which is in fact specified in eq. 2.40) and $m_i$ is maternity at age $i$. This is sensible if you always want class indicies to start from 1; but lack of careful attention to eq. (2.40) may lead to mistakes here. Gotelli (2008) also follows this convention, and in fact only talks about postbreeding census models.
+
+Morris and Doak's (2002, pp. 207-210) is consistent with Caswell for prebreeding and birth-flow models. For postbreeding models, they say $F_j = s_j f_j$. It is clear from their treatment of survival and growth that $j$ references the state at the start of the interval.
 
 # Highlighting errors
 ## Treatment of seeds
