--- a/reports/LitReview.Rmd
+++ b/reports/LitReview.Rmd
@@ -5,7 +5,7 @@ date: "4/20/2018"
 output: pdf_document
 ---
 
-This is literature review for the MPM errors project. It will include a description of how the issues are treated in texts and key papers, as well as any existing literature that highlights these errors. Note that in all areas consulted, the treatment in Caswell (1989) is identical to that in Caswell (2001).
+This is literature review for the MPM errors project. It will include a description of how the issues are treated in texts and key papers, as well as any existing literature that highlights these errors. Note that in all areas consulted, the treatment in Caswell (1989) is identical to that in Caswell (2001). I have not tried to classify the presentation in Ebert (1999) as the presentation is so unsystematic.
 
 # Guidance on matrix construction
 ## Census model and survival in the reproduction transition
@@ -78,6 +78,8 @@ Matrices:
 Caswell, H. 1989. Matrix population models: Construction, analysis, and interpretation. Sinauer: Sunderland, MA.
 
 Caswell, H. 2001. Matrix population models: Construction, analysis, and interpretation, 2nd edition. Sinauer: Sunderland, MA.
+
+Ebert, T.A. 1999. Plant and animal populations: Methods in demography. Academic Press: San Diego, CA.
 
 Gotelli, N.J. 2008. A primer of ecology, 4th edition. Sinauer: Sunderland, MA.
 
