--- a/docs/Outline.Rmd
+++ b/docs/Outline.Rmd
@@ -5,6 +5,28 @@ date: "4/23/2018"
 output: pdf_document
 ---
 
+# Original abstract
+**Note:** any revisions need to be approved by Dmitrii!
+
+Matrix population models (MPMs) are powerful tools for translating demographic and life history information into a form that can be used to address a wide range of research topics, such as projecting population dynamics, evaluating stressor impacts on populations, and studying life history evolution. However, the reliability of such studies depends on the MPM being constructed in a way that accurately reflects the species’ life history. I highlight three errors commonly encountered in published MPMs: (1) failing to include survival as well as fertility in the reproduction term; (2) introducing a one-year delay in age at first reproduction; and (3) incorrectly calculating the growth transition rate out of a stage with a mean development time greater than the model time step. I review the sources of such errors and provide new analyses revealing the impact of such errors on model predictions. These MPM construction issues are treated extensively in textbooks, so their existence in current literature is surprising. To quantify the prevalence of such errors I examined and scored the original publications underlying the models in the COMADRE Animal Matrix Database. The first two errors were found in 41% and 42%, respectively, of the published studies; all were in models that used a “post-breeding census” representation of the life cycle graph (in which newborns [eggs, neonates, fledglings, etc.] are explicitly included). Of the studies where stages may last longer than one time step, 25% constructed the growth rate using inappropriate formulas, and 37% used methods that were either undescribed or would generate the correct development time only if the population remained at the observed within-stage age structure. These results suggest that further efforts may be required to educate biologists on the construction of MPMs, perhaps in concert with the development of new software tools. Furthermore, the conclusions of many studies that are based on MPMs may need to be re-examined, and synthetic studies using the COMADRE Database need to be undertaken with caution.
+
+# Introduction
+
+# Challenges in MPM construction
+## The fertility transition must span a full timestep
+
+## Matching the age at first reproduction to the species' life history
+
+## Ensuring that the mean time in each developmental stage matches the species' life history
+
+# Consequences of incorrect MPM construction
+
+# Prevalence of construction errors in published MPMs
+## Methods
+
+## Results
+
+# Discussion
 
 # Things to think about
 
